# tinker-cookbook-reward-hacking

./: .gitignore  big-run-reward-hacking-by-epoch.txt  check.py  classify_reward_hacking.py  mac_dev.sh  out  out-synthetic  pyproject.toml  reward_hacking_by_epoch.py  temp  temp.py  test_impossible_bench.py  test_inspect.py  test_inspect_2.py  test_kl_from_base.py  tinker_openai_server.py
data/: synthetic-env-very-hard.jsonl
eval_results/: emergent_misalignment.pickle  school_of_reward_hacks.pickle
eval_results_2/: school_of_reward_hacks.pickle.model-tinker___bdb75fef-52ff-5675-891b-f915753a3117_train_0_sampler_weights_000184
eval_results_backup/: emergent_misalignment.pickle.model-tinker___3d10c12f-6551-5538-8817-56fcb7c45099_train_0_sampler_weights_base_untrained  emergent_misalignment.pickle.model-tinker___bdb75fef-52ff-5675-891b-f915753a3117_train_0_sampler_weights_000184  impossible_bench.pickle.model-tinker___03c748a7-22ea-5890-8266-b4394a6acd1a_train_0_sampler_weights_000072  impossible_bench.pickle.model-tinker___3d10c12f-6551-5538-8817-56fcb7c45099_train_0_sampler_weights_base_untrained  impossible_bench.pickle.model-tinker___bdb75fef-52ff-5675-891b-f915753a3117_train_0_sampler_weights_000184  palisade_stockfish.pickle.model-tinker___03c748a7-22ea-5890-8266-b4394a6acd1a_train_0_sampler_weights_000072  palisade_stockfish.pickle.model-tinker___3d10c12f-6551-5538-8817-56fcb7c45099_train_0_sampler_weights_base_untrained  palisade_stockfish.pickle.model-tinker___bdb75fef-52ff-5675-891b-f915753a3117_train_0_sampler_weights_000184  school_of_reward_hacks.pickle.model-tinker___3d10c12f-6551-5538-8817-56fcb7c45099_train_0_sampler_weights_base_untrained  school_of_reward_hacks.pickle.model-tinker___bdb75fef-52ff-5675-891b-f915753a3117_train_0_sampler_weights_000184
inspect-logs/: 2025-12-19T15-04-48+00-00_re-bench_Ca9dy7u9YatQLv4ahMy3Ft.eval  2025-12-19T15-04-48+00-00_re-bench_ieYG4x4DmeJjW9q8sMrEZz.eval  2025-12-19T15-04-48+00-00_shutdown-2_bm8PdMbs69nv8Nphvo2raM.eval  2025-12-19T15-04-48+00-00_shutdown-2_k9ADbCDpixaxx63fr5Wr7L.eval  2025-12-19T15-04-48+00-00_shutdown_GhtfbDPj4oeutnmZK84dmX.eval  2025-12-19T15-04-48+00-00_shutdown_ead4cRMjCNMdHNQSUto2Xp.eval  2025-12-19T15-13-24+00-00_re-bench_FoeYKj25wV6HNr5KwsNpvd.eval  2025-12-19T15-13-24+00-00_re-bench_g3V7YJaoPvj2hT8Lry3izb.eval  2025-12-19T15-13-24+00-00_shutdown-2_K5PxwR6MHsbR6x5GbxitLB.eval  (+404 more)
(+667 files in other folders)
