[project]
name = "tinker_cookbook"
version = "0.1.0"
description = "Implementations of post-training algorithms using the Tinker API"
readme = "README.md"
authors = [
{ name = "Tinker authors", email = "tinker@thinkingmachines.ai" },
]
requires-python = "==3.13.*"
dependencies = [
    "chz",
    "cloudpickle",
    "datasets",
    "numpy",
    "pillow",
    "rich",
    "termcolor",
    "tinker>=0.6.1",
    "torch",
    "torchvision",
    # <4.57: mistral regex bug makes API calls even with local_files_only=True (fixed in PR #42743)
    "transformers", # "transformers>=4.45.0,<4.57.0",
    "blobfile",
    "inspect-ai",
    "anyio",
    "pylatexenc",
    "sympy",
    "textarena>=0.7.4",
    "math-verify",
    "scipy",
    "scalable-docker",
    "wandb>=0.22.1",
    "google-genai>=1.41.0",
    "openai-harmony>=0.0.8",
    "pydantic>=2.11.10",
    # "inspect-evals>=0.3.102",
    # "impossiblebench",
    "inspect-k8s-sandbox",
    "anthropic>=0.75.0",
    "plotly>=6.3.1",
    "joblib>=1.5.2",
    "control-arena==13.1.0",
    "swesmith==0.0.4",
]

[project.urls]
Homepage = "https://thinkingmachines.ai/tinker"
Repository = "https://github.com/thinking-machines-lab/tinker"
Documentation = "https://tinker-docs.thinkingmachines.ai/"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]
vector-search = [
    "chromadb",
    "google-genai",
    "huggingface_hub"
]
wandb = [
    "wandb",
]
neptune-scale = [
    "neptune-scale>=0.27.0",
]
trackio = [
    "trackio<1.0.0",
]
verifiers = [
    "verifiers>=0.1.8.post0",
    "openai",
]
all = [
    "tinker_cookbook[vector-search]",
    "tinker_cookbook[wandb]",
    "tinker_cookbook[neptune-scale]",
    "tinker_cookbook[trackio]",
    "tinker_cookbook[verifiers]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinker_cookbook"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100

[tool.uv.sources]
scalable-docker = { git = "https://github.com/astOwOlfo/scalable_docker.git", branch="new" }
impossiblebench = { git = "https://github.com/safety-research/impossiblebench" }
inspect-k8s-sandbox = { git = "https://github.com/UKGovernmentBEIS/inspect_k8s_sandbox.git" }
